Se agregaron tablas para produccion de los pliegos

--- a/SolicitudCotizador/Views/Shared/_CrearProceso.cshtml
+++ b/SolicitudCotizador/Views/Shared/_CrearProceso.cshtml
@@ -3,6 +3,7 @@
 @{ 
     Layout = null;
 }
+@Scripts.Render("~/bundles/jquery")
 <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
 <script>
     function OnSuccess(data) {
