ultimos cambios cotizador copesa

--- a/ProyectoPersonal/Views/ProductosEspeciales/Create.cshtml
+++ b/ProyectoPersonal/Views/ProductosEspeciales/Create.cshtml
@@ -451,7 +451,7 @@
                     <table class="table table-condensed table-bordered table-striped" id="muestra">
                         <thead>
                             <tr>
-                                <th>Descripción de Procesos</th>
+                                <th>Descripción de Procesos</th>x
                                 <th>#Entradas</th>
                                 <th>CF</th>
                                 <th>CV</th>
